include(${CMAKE_SOURCE_DIR}/Configuration/MasterMake.cmake)
add_subdirectory(AvalancheBidispersed)
add_subdirectory(BidispersedChute)
add_subdirectory(FlowRuleBidispersed)
#add_subdirectory(BeltKasper)
add_subdirectory(BidispersedBelt)
add_subdirectory(DrumSuperQuadrics)
add_subdirectory(HopperIrana)
add_subdirectory(Contraction)
add_subdirectory(MaserParallel)
add_subdirectory(LongShortComparisonPaper)